@@ -16,7 +16,7 @@ namespace Sawczyn.EFDesigner.EFModel
       /// </summary>
       public void CollapseShape()
       {
-         Collapse();
+         SetIsExpandedValue(false);
       }
 
       /// <summary>
@@ -24,7 +24,7 @@ namespace Sawczyn.EFDesigner.EFModel
       /// </summary>
       public void ExpandShape()
       {
-         Expand();
+         SetIsExpandedValue(true);
       }
 
       /// <summary>
